replace reflective array instantations from caches